2009-01-02  Bruce van der Kooij  <brucevdkooij@gmail.com>

	* nautilussvn/lib/dbus/service.py:
	* nautilussvn/lib/dbus/status_monitor.py:
	* nautilussvn/lib/extensions/nautilus/NautilusSvn.py:
	* nautilussvn/lib/vcs/svn.py:
	Create an actual NautilusSvn service to compliment the StatusMonitor,
	also added code to start the DBus service when it's not running.

2009-01-02  Bruce van der Kooij  <brucevdkooij@gmail.com>

	* nautilussvn/data/icons/hicolor/scalable/actions/nautilussvn-bug.s
	vg:
	* nautilussvn/data/icons/hicolor/scalable/actions/nautilussvn-dbus.
	svg:
	* nautilussvn/data/icons/hicolor/scalable/actions/nautilussvn-run.s
	vg:
	* nautilussvn/data/icons/hicolor/scalable/actions/nautilussvn-stop.
	svg:
	* nautilussvn/lib/dbus/status_monitor.py:
	* nautilussvn/lib/extensions/nautilus/NautilusSvn.py:
	* nautilussvn/lib/vcs/svn.py:
	Uh.... I think I just squashed all major bugs, another logic error and
	well we are using DBus now... so.. uh... yeah

2009-01-02  Bruce van der Kooij  <brucevdkooij@gmail.com>

	* nautilussvn/lib/extensions/nautilus/NautilusSvn.py:
	Don't have to write to a file to notice this behavior.

2009-01-02  Bruce van der Kooij  <brucevdkooij@gmail.com>

	* nautilussvn/lib/dbus/status_monitor.py:
	DBus needs to be made thread-aware using thread_init calls.
	
	* nautilussvn/lib/extensions/nautilus/NautilusSvn.py:
	* nautilussvn/lib/vcs/svn.py:
	Still having some PySVN problems with threading so create a client when
	it is going to be used, not as an instance variable. Still means we'll
	have cache problems (two threads accesing the same cache).
	
	* nautilussvn/tests/dbus/dbus_threading.py:
	* nautilussvn/tests/dbus/status_monitor_add_watch.py:
	* nautilussvn/tests/dbus/status_monitor_listener.py:
	Some more tests (this should be done in a single class, but it helped me 
	enough for now).

2009-01-02  Bruce van der Kooij  <brucevdkooij@gmail.com>

	* nautilussvn/lib/dbus/__init__.py:
	* nautilussvn/lib/dbus/status_monitor.py: